[tool.poetry]
name = "nautobot-docker-compose"
version = "0.1.1"
description = ""
authors = ["John Doe <johndoe@mail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<=3.12.9"
nautobot = "2.4.5"

# nautobot-example-plugin = {path = "plugins/plugin_example", develop = true}
setuptools = "^78.0.2"
netmiko = "^4.5.0"


[tool.poetry.group.dev.dependencies]
invoke = "*"
toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
